removes unnecessary fixed width for axis-scrollbar

--- a/scss/map.scss
+++ b/scss/map.scss
@@ -19,10 +19,6 @@
     background: url($timeline-scroll-dot) repeat-x;
     transition: none !important;
     width: 100%;
-
-    .ps-scrollbar-x {
-      width: 425px !important;
-    }
   }
 }
 
